<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014-2022 Stream.io Inc. All rights reserved.

    Licensed under the Stream License;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      https://github.com/GetStream/stream-chat-android/blob/main/LICENSE

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Chat Sample Android</string>
    <string name="backend_error_info">Ups, something went wrong</string>
    <string name="sdk_version_template">Stream SDK v %s</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="leave">Leave</string>
    <string name="clear_history">Clear History</string>
    <string name="keep_history">Keep History</string>
    <string name="remove">Remove</string>
    <string name="ok">Ok</string>

    <!--User Login Screen-->
    <string name="user_login_screen_title">Welcome to Stream Chat</string>
    <string name="user_login_select_user">Select a user to try the Android SDK:</string>
    <string name="user_login_user_subtitle">Stream test account</string>
    <string name="user_login_advanced_options">Advanced options</string>
    <string name="user_login_custom_settings">Custom settings</string>

    <!--Custom Login Screen-->
    <string name="custom_login_button_text">Login</string>
    <string name="custom_login_field_api_key_hint">Chat API Key</string>
    <string name="custom_login_field_user_id_hint">User ID</string>
    <string name="custom_login_field_user_token">User Token</string>
    <string name="custom_login_field_user_name_hint">Username (optional)</string>
    <string name="custom_login_validation_error">This field is required</string>

    <!--Home screen-->
    <string name="home_drawer_new_direct_message">New Direct Message</string>
    <string name="home_drawer_new_group">New Group</string>
    <string name="home_drawer_switch_user">Switch User</string>
    <string name="home_drawer_request_notification_permissions">Request Notification Permissions</string>
    <string name="home_drawer_sign_out">Sign Out</string>
    <string name="home_bottom_nav_chats">Chats</string>
    <string name="home_bottom_nav_mentions">Mentions</string>
    <string name="home_bottom_nav_threads">Threads</string>

    <!-- Channel list -->
    <string name="channel_list_empty_title">Let\'s start chatting!</string>
    <string name="channel_list_empty_description">How about sending your first message to a friend?</string>
    <string name="channel_list_start_chat">Start a chat</string>

    <!--Add Channel Screen-->
    <string name="add_channel_title">New Chat</string>
    <string name="add_member_title">TO:</string>
    <string name="add_member_hint">Type a name</string>
    <string name="create_group">Create a Group</string>
    <string name="add_channel_empty_user_name_separator">Others</string>
    <string name="add_channel_user_list_title">On the platform</string>
    <string name="add_channel_user_list_search_title">Matches for \"%s\"</string>
    <string name="add_channel_empty_users_title">No user matches these keywords…</string>
    <string name="add_channel_empty_message_list_title">No chats here yet…</string>
    <string name="add_channel_user_item_offline">Offline</string>
    <string name="add_channel_user_item_online">Online</string>
    <string name="add_channel_user_item_last_online">Last online %s</string>
    <string name="add_channel_error_create_channel">Failed to create channel</string>

    <!--Add Group Channel Screens-->
    <string name="add_group_channel_title">Add Group Members</string>
    <string name="add_group_channel_next_button">Next</string>
    <string name="add_group_channel_error_create_channel">Failed to create channel</string>
    <string name="add_group_channel_select_name_title">Name of Group Chat</string>
    <string name="add_group_channel_select_name_choose_title">NAME</string>
    <string name="add_group_channel_select_name_choose_hint">Choose a group chat name</string>
    <plurals name="members_count_title">
        <item quantity="one">%1d Member</item>
        <item quantity="other">%1d Members</item>
    </plurals>
    <string name="add_group_channel_select_name_create_button_title">Create</string>

    <!-- Chat Info Screens -->
    <string name="chat_info_user_name">Username</string>
    <string name="chat_info_option_mute_user">Mute User</string>
    <string name="chat_info_option_block_user">Block User</string>
    <string name="chat_info_option_pinned_messages">Pinned Messages</string>
    <string name="chat_info_option_media">Photos &amp; Videos</string>
    <string name="chat_info_option_shared_media_empty_title">No media</string>
    <string name="chat_info_option_shared_media_empty_description">Photos or video sent in this chat will appear here. </string>
    <string name="chat_info_option_files">Files</string>
    <string name="chat_info_option_shared_files_empty_title">No files</string>
    <string name="chat_info_option_shared_files_empty_description">Files sent in this chat will appear here.</string>
    <string name="chat_info_option_shared_groups">Shared Groups</string>
    <string name="chat_info_option_shared_groups_empty_title">Groups shared with %s will appear here.</string>
    <string name="chat_info_option_delete_conversation">Delete Conversation</string>
    <string name="chat_info_delete_conversation_confirm">Are you sure you want to delete this conversation?</string>
    <string name="chat_info_error_block_user">Failed to block user</string>
    <string name="chat_info_error_mute_channel">Failed to switch mute state</string>
    <string name="chat_info_error_delete_channel">Failed to delete channel</string>

    <string name="chat_group_info_owner">Owner</string>
    <string name="chat_group_info_member">Member</string>
    <string name="chat_group_info_moderator">Moderator</string>
    <string name="chat_group_info_option_mute">Mute Group</string>
    <string name="chat_group_info_option_hide">Hide Group</string>
    <string name="chat_group_info_option_show">Show Group</string>
    <string name="chat_group_info_option_hide_description">Do you really want to hide the group %s?</string>
    <string name="chat_group_info_option_leave">Leave Group</string>
    <string name="chat_group_info_option_members_separator_title">%d more</string>
    <string name="chat_group_info_edit_name_label">NAME</string>
    <string name="chat_group_info_edit_name_hint">Add a group name</string>
    <string name="chat_group_info_leave_confirm">Are you sure you want to leave the group %s?</string>
    <string name="chat_group_info_user_option_view_info">View Info</string>
    <string name="chat_group_info_user_option_message">Message</string>
    <string name="chat_group_info_user_option_remove">Remove From Group</string>
    <string name="chat_group_info_user_option_ban">Ban for 1 hour</string>
    <string name="chat_group_info_user_option_unban">Unban</string>
    <string name="chat_group_info_user_remove_title">Remove %s</string>
    <string name="chat_group_info_user_remove_description">Are you sure you want to remove %s from %s?</string>
    <string name="chat_group_info_user_ban_no_expiry">Ban has no expiry</string>
    <string name="chat_group_info_user_ban_expires">Ban expires %s</string>
    <string name="chat_group_info_user_ban_expired">Ban has already expired</string>
    <string name="chat_group_info_error_remove_member">Failed to remove member</string>
    <string name="chat_group_info_error_ban_member">Failed to ban member</string>
    <string name="chat_group_info_error_unban_member">Failed to unban member</string>
    <string name="chat_group_info_error_change_name">Failed to change channel name</string>
    <string name="chat_group_info_error_mute_channel">Failed to switch mute state</string>
    <string name="chat_group_info_error_hide_channel">Failed to switch hide state</string>
    <string name="chat_group_info_error_leave_channel">Failed to leave channel</string>
    <string name="chat_group_info_error_add_member">Failed to add channel member</string>

    <!-- Pinned message list screen -->
    <string name="pinned_message_list_title">Pinned Messages</string>

    <!-- Chat Screen -->
    <string name="message_forwarded">Forwarded</string>

    <!-- Flag message -->
    <string name="message_flagged_title">Message Flagged</string>
    <string name="message_flagged_description">The message has been reported to a moderator.</string>

    <!-- Message Actions Dialog -->
    <string name="message_action_translate">Translate</string>
    <string name="message_action_clear_translation">Show Original</string>
</resources>
