<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014-2022 Stream.io Inc. All rights reserved.

    Licensed under the Stream License;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      https://github.com/GetStream/stream-chat-android/blob/main/LICENSE

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/channels_fragment"
        android:icon="@drawable/ic_chats"
        android:title="@string/home_bottom_nav_chats"
        />
    <item
        android:id="@+id/mentions_fragment"
        android:icon="@drawable/stream_compose_ic_mentions"
        android:title="@string/home_bottom_nav_mentions"
        />
    <item
        android:id="@+id/threads_fragment"
        android:icon="@drawable/ic_threads"
        android:title="@string/home_bottom_nav_threads"
        />
</menu>
