<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014-2026 Stream.io Inc. All rights reserved.

    Licensed under the Stream License;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      https://github.com/GetStream/stream-chat-android/blob/main/LICENSE

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stream_ui_white_snow"
    tools:ignore="MissingConstraints"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/stream_ui_white"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_login_advanced_options"
            android:textAppearance="@style/StreamUiTextAppearance.HeadlineBold"
            />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/stream_ui_divider_height"
        android:background="@drawable/stream_ui_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/inputFieldsFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="60dp"
        app:constraint_referenced_ids="apiKeyInputLayout, userIdInputLayout, userTokenInputLayout, userNameInputLayout"
        app:flow_lastVerticalStyle="packed"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="8dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintVertical_bias="0"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apiKeyInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_api_key_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apiKeyEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userIdInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_user_id_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userIdEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTokenInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_user_token"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userTokenEditText"
            style="@style/LoginEditText"
            android:inputType="textMultiLine"
            android:singleLine="false"
            tools:ignore="RtlHardcoded"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_user_name_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            style="@style/LoginEditText"
            android:imeOptions="actionDone"
            tools:ignore="RtlHardcoded"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:backgroundTint="@color/stream_ui_button_background_color"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/custom_login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/stream_ui_button_text_color"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/sdkVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/sdkVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_medium"
        android:textColor="@color/stream_ui_grey_gainsboro"
        android:textSize="@dimen/stream_ui_text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/sdk_version_template"
        />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
